# easy-hr

./: .env  README.md  app.py  dockerFile  docker_build.sh  docker_run.sh  gcloud_build.sh  gcloud_deploy.sh  gcloud_list.sh  gcloud_set_vars.sh  gcloud_undeploy.sh  pyproject.toml
data/: HR_business_And_relations.txt  Team_Head_offices_and_projects.txt  Team_Organization_and_Culture.txt  Teamrecruiting_and_talent_acquisition.txt
